fix users controllers
